Fix redirects to login and logout
