# server/src/swagger-output.json
@@ -11,6 +11,26 @@
     }
   ],
   "paths": {
+    "/api/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/user/ledger": {
       "get": {
         "tags": [
